fix spacing  and install gh-page

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -202,7 +202,7 @@
     .main__service {
       position: absolute;
       bottom: -9rem;
-      left: 11.4%;
+      right: 3.2rem;
       width: 30rem;
       padding: 1.683rem 7.1rem 2.5rem 1.9rem;
       background: #181719;
@@ -248,10 +248,9 @@
   }
 
   @include md {
-    grid-template-columns: auto 50%;
+    grid-template-columns: auto 42%;
     column-gap: 1.5rem;
 
-    //42.7rem
     .main__content {
       h1 {
         margin-bottom: 2.5rem;
@@ -279,12 +278,11 @@
 
     .main__services {
       height: 65%;
-      //30.5rem
 
       .main__service {
-        bottom: -0.5rem;
+        bottom: -1.5rem;
         left: auto;
-        right: 4.341%;
+        right: 3.2rem;
       }
     }
   }
@@ -325,7 +323,7 @@
       .main__service {
         bottom: -9.5rem;
         left: auto;
-        right: 4.341%;
+        right: 3.2rem;
         width: 41rem;
 
         .main__service-header {
